systems/java-monolith/k8s/overlays/bare-metal/gateway-cert.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bankapp-gateway
  namespace: bankapp
  labels:
    app.kubernetes.io/name: bankapp
    app.kubernetes.io/component: gateway
    app.kubernetes.io/part-of: bankapp
    app.kubernetes.io/managed-by: kustomize
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: java-monolith.ibtisam-iq.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      port: 443
      protocol: HTTPS
      hostname: java-monolith.ibtisam-iq.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: java-monolith-tls
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: Same
